# engine

./: .clang-tidy  .gitignore  .gitmodules  LICENSE  README.md  flake.nix  justfile  meson.build
.github/workflows/: clang-format.yml  clang-tidy.yml
docs/: Doxyfile  conf.py  index.rst
docs/api/: classEngine_1_1AssetManager_1_1AssetStore.rst  classEngine_1_1Core.rst  classEngine_1_1ECS_1_1Entity.rst  classEngine_1_1Logger.rst  classEngine_1_1Scenes_1_1Manager.rst  classEngine_1_1Scenes_1_1Scene.rst  classGE_1_1AssetManager_1_1AssetStore.rst  classGE_1_1Core.rst  classGE_1_1ECS_1_1Entity.rst  classGE_1_1Logger.rst  classGE_1_1Scenes_1_1Manager.rst  classGE_1_1Scenes_1_1Scene.rst  class_view_hierarchy.rst.include  define_Logger_8hpp_1a19d6681b2ffd31e5ea447610217965bf.rst  define_Logger_8hpp_1a378e28bfcb78d17285210d6bbb70a083.rst  define_Logger_8hpp_1a4091a2d7d849a8b5eded40d8723b8768.rst  define_Logger_8hpp_1a58c994180e09d2f6400133b19b1d7036.rst  define_Logger_8hpp_1a8538cd92b0b576e168d19824a6fc866f.rst  define_Logger_8hpp_1ad044ffeb9ff9b6e1968c05377a5a4a40.rst  define_Logger_8hpp_1ad4a9117ce894e3319e903142347a0f63.rst  define_Logger_8hpp_1add82efa459e0af380b68522c29b9fd44.rst  define_Logger_8hpp_1aea6cd8878f68ad0fc15694141438da38.rst  define_Logger_8hpp_1aebaa368e5eeb63225b621cb047cea37c.rst  dir__mnt_storage_Projects_engine_engine_Engine.rst  dir_engine.rst  dir_engine_Engine.rst  (+72 more)
engine/: EntryPoint.cpp  meson.build
engine/Engine/: Core.cpp
engine/Engine/AssetManager/: AssetStore.cpp
engine/Engine/Scenes/: Scene.cpp  SceneManager.cpp
engine/src/: Core.cpp
engine/src/AssetManager/: AssetStore.cpp
engine/src/Scenes/: Scene.cpp  SceneManager.cpp
src/: Engine.cpp  Engine.h  EntryPoint.cpp  Logger.h  Main.cpp  main.cpp
subprojects/: entt.wrap
tests/: meson.build
(+96 files in other folders)
